game board mobile resize

--- a/WebApi/wwwroot/game.html
+++ b/WebApi/wwwroot/game.html
@@ -28,6 +28,15 @@
 
         #canvas {
             background-color: dimgrey;
+            width: 700px;
+            height: 700px;
+        }
+
+        @media screen and (max-width: 768px) {
+            #canvas {
+                width: 90vw;
+                height: 90vw;
+            }
         }
     </style>
 </head>
