--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -195,7 +195,7 @@
                         <div class="item mb-3">
                             <p class="form-label">Количество копий запусков (для тестирования)</p>
                             <input type="number" id="game-copy" class="form-control mb-3" value="1" />
-                            <button class="form-control btn" onclick="create_copies_game()">СОЗДАТЬ ИГРУ</button>
+                            <button class="form-control btn bg-secondary" onclick="create_copies_game()">СОЗДАТЬ ИГРУ</button>
                         </div>
 
                         <div class="item overflow">
